--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
       </div>
     </header>
     <!--main -->
-
     <main>
       <!--section hero-->
       <section class="hero">
@@ -125,7 +124,6 @@
           </ul>
         </div>
       </section>
-
       <!--section TEAM-->
       <section class="team">
         <div class="container container-team">
@@ -140,7 +138,6 @@
               <div class="team-block">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
-
                 <!--social-icons-block-->
                 <ul class="social-icons-block">
                   <li class="social-icons">
@@ -187,7 +184,6 @@
               <div class="team-block">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
-
                 <!--social-icons-block-->
                 <ul class="social-icons-block">
                   <li class="social-icons">
@@ -322,49 +318,125 @@
           </ul>
         </div>
       </section>
-
       <!--section PORTFOLIO-->
       <section class="portfolio">
         <div class="container container-portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-description">
-            <li class="portfolio-card">
-              <img src="./images/pimage5.jpg" alt="Card Content" width="360" />
+            <!--1 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage5.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-card">
-              <img src="./images/pimage6.jpg" alt="Card Content" width="360" />
+
+            <!--2 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage6.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-card">
-              <img src="./images/pimage5.jpg" alt="Card Content" width="360" />
+
+            <!--3 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage7.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-card">
-              <img src="./images/pimage6.jpg" alt="Card Content" width="360" />
+
+            <!--4 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage8.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-card">
-              <img src="./images/pimage7.jpg" alt="Card Content" width="360" />
+
+            <!--5 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage9.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li class="portfolio-card">
-              <img src="./images/pimage8.jpg" alt="Card Content" width="360" />
+
+            <!--6 card -->
+            <li class="portfolio-item portfolio_item">
+              <div class="image-container image_container">
+                <img
+                  src="./images/pimage10.jpg"
+                  alt="Card Content"
+                  width="360"
+                />
+                <p class="overflow-text overflow_text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-block">
                 <h3 class="portfolio-name">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
