--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             >Web<span class="logo-text">Studio</span></a
           >
           <ul class="main-nav">
-            <li><a href="./index.html" class="main-nav-link">Studio</a></li>
+            <li>
+              <a href="./index.html" class="main-nav-link-studio">Studio</a>
+            </li>
             <li><a href="" class="main-nav-link">Portfolio</a></li>
             <li><a href="" class="main-nav-link">Contacts</a></li>
           </ul>
