--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
           </ul>
         </div>
       </section>
-      <!--section PORTFOLIO-->
+      <!--section OUR PORTFOLIO-->
       <section class="portfolio">
-        <div class="container container-portfolio">
+        <div class="container container our-portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-description">
             <!--1 card -->
